<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/tentel_debugging_preferences_title"
        app:summary="@string/tentel_debugging_preferences_summary"
        app:fragment="com.tentel.app.fragments.settings.tentel.DebuggingPreferencesFragment"/>

    <Preference
        app:title="@string/tentel_terminal_io_preferences_title"
        app:summary="@string/tentel_terminal_io_preferences_summary"
        app:fragment="com.tentel.app.fragments.settings.tentel.TerminalIOPreferencesFragment"/>

    <Preference
        app:title="@string/tentel_terminal_view_preferences_title"
        app:summary="@string/tentel_terminal_view_preferences_summary"
        app:fragment="com.tentel.app.fragments.settings.tentel.TerminalViewPreferencesFragment"/>

</PreferenceScreen>
